--- a/dashboard/app/index.html
+++ b/dashboard/app/index.html
@@ -2,12 +2,12 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Entelect AWS-Email Dashboard</title>
+  <title>Entelect AWS Email Dashboard</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
 
-  <p><h1>Entelect AWS-Email Dashboard</h1></p>
+  <p><h1>Entelect AWS Email Dashboard</h1></p>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
